# Phase2-Track3-Day7-DPO-ORPO-Alignment

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: local.yaml
data/: sample_preferences.jsonl
docs/: REPORT_TEMPLATE.md  data_card_template.md  lab_guide.md  regression_prompts.md
scripts/: generate_data.py  smoke_test.sh
src/preference_lab/: cli.py  config.py  data.py  evaluate.py  losses.py  schemas.py  trainers.py
tests/: test_data.py  test_evaluate.py  test_losses.py
