[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preference-alignment-lab-starter"
version = "0.1.0"
description = "Production-style skeleton for DPO/ORPO preference alignment lab"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.7", "typer>=0.12", "rich>=13.7", "pyyaml>=6.0", "numpy>=1.26"]
[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10", "openai>=1.30"]
train = ["torch>=2.2", "transformers>=4.44", "datasets>=2.20", "trl>=0.12", "peft>=0.12"]
[project.scripts]
pref-lab = "preference_lab.cli:app"
[tool.ruff]
line-length = 100
src = ["src", "tests"]
[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[tool.setuptools.packages.find]
where = ["src"]

